2024-01-15T12:18:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7528725559 # 50
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-01-15
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2978 / 0 2981 / +0 +3

2024-01-15T04:12:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7524230180 # 48
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-01-15
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2976 / 0 2978 / +0 +2

2024-01-15T00:48:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7522852313 # 47
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-01-15
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2975 / 0 2976 / +0 +1

2024-01-14T20:09:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7521452386 # 46
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-01-14
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2974 / 0 2975 / +0 +1

2024-01-14T08:11:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7517930907 # 43
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-01-14
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2973 / 0 2974 / +0 +1

2024-01-13T16:11:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7513500841 # 39